--- a/src/App.css
+++ b/src/App.css
@@ -232,12 +232,46 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Banner Css ************/
 .banner {
-  margin-top: 0;
+  margin-top: -100px;
   padding: 260px 0 100px 0;
   background-image: url('./assets/img/banner-bg.png');
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+.banner button {
+  font-weight: 700;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 12px 30px;
+  font-size: 18px;
+	position: relative;
+	background-color: transparent;
+	transition: 0.3s ease-in-out;
+}
+.banner button span {
+  z-index: 1;
+}
+.banner button::before {
+  content: "";
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  background-color: #fff;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  transition: 0.3s ease-in-out;
+}
+.banner button:hover {
+  color: #121212;
+  background-color: #fffdfd;
+}
+.banner button:hover::before {
+	content: "";
+	width: 100%;
+	height: 100%;
+	position: absolute;
 }
 .banner .tagline {
   font-weight: 700;
@@ -265,27 +299,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   line-height: 1.5em;
   width: 96%;
 }
-.banner button {
-  color: #fff;
-  font-weight: 700;
-  font-size: 20px;
-  margin-top: 60px;
-  letter-spacing: 0.8px;
-  display: flex;
-  align-items: center;
-}
-.banner button svg {
-  font-size: 25px;
-  margin-left: 10px;
-  transition: 0.3s ease-in-out;
-  line-height: 1;
-}
-.banner button:hover svg {
-  margin-left: 25px;
-}
+
 .banner img {
   animation: updown 3s linear infinite;
 }
+
 @keyframes updown {
     0% {
         transform: translateY(-20px);
@@ -345,6 +363,37 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 /************ Projects Css ************/
+.experience-container {
+  padding: 15px;
+  background: rgba(48, 47, 47, 0.4);
+  border-radius: 64px;
+  text-align: center;
+}
+
+.experience-title {
+  font-size: 1.5rem;
+  color: #d8e1eb; 
+  margin-bottom: 10px;
+}
+
+.centered-text {
+  text-align: center; 
+}
+
+.experience-duration {
+  font-size: 1.2rem;
+  color: #6c757d; 
+  margin-bottom: 20px;
+  align-items: center;
+}
+
+.experience-description {
+  font-size: 1rem;
+  color: #212529; /* Dark color for text */
+  line-height: 1.6;
+  align-items: stretch;
+}
+
 .project {
   padding: 80px 0;
   position: relative;
